# cmake-project-template-c

./: .gitignore  CMakeLists.txt  README.md
demo/: CMakeLists.txt  main.c
src/: CMakeLists.txt  header.h  source.c
